<resources>
    <string name="app_name">Lists</string>
    <string name="available_lists">Available lists</string>
    <string name="button_addElement">New element</string>
    <string name="elementView_btn_more" translatable="false">+</string>
    <string name="description">Description</string>
    <string name="tags">Tags</string>
    <string name="tags_here">Tags here…</string>
    <string name="sub_list">Sub list</string>
    <string name="new_element">New element</string>
    <string name="description_here">Description here…</string>
    <string name="done">Done</string>
    <string name="delete">Delete</string>
    <string name="new_list">New list…</string>
    <string name="list_title">List title…</string>
    <string name="new_element_name">New element…</string>
    <string name="delete_list">Delete list</string>
    <string name="confirm">Confirm</string>
    <string name="wish_delete_list">Do you wish to delete this list?</string>
    <string name="wish_delete_element">Do you wish to delete this element?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="delete_element">Delete element</string>
    <string name="details">Details</string>
    <string name="list_name">List name…</string>
    <string name="new_tag">New tag</string>
    <string name="tag_name">Tag…</string>
    <string name="sort">Sort</string>
    <string name="alphabetical">Alphabetical</string>
    <string name="chronological">Chronological</string>
    <string name="custom">Custom Order</string>
    <string name="settings">Settings</string>
    <string name="delete_finished">Delete finished</string>
    <string name="wish_delete_finishedElements">Do you wish to delete all finished elements? This operation is permanent.</string>
    <string name="number_elements_finished">" elements finished"</string>
    <string name="search">Search in list</string>
    <string name="element_or_tags">Element or tags…</string>
    <string name="recycle_finished">Recycle finished</string>
    <string name="title_activity_settings" translatable="false">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header" translatable="false">Messages</string>
    <string name="sync_header" translatable="false">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title" translatable="false">Your signature</string>
    <string name="reply_title" translatable="false">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title" translatable="false">Sync email periodically</string>
    <string name="attachment_title" translatable="false">Download incoming attachments</string>
    <string name="attachment_summary_on" translatable="false">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off" translatable="false">Only download attachments when manually requested</string>
    <string name="wish_delete_tag">Do you wish to delete this tag?</string>
    <string name="color">Color</string>
    <string name="color_example">Color example</string>
    <string name="show_only">Show only...</string>
    <string name="show_all">Show all</string>
    <string name="info">Information</string>
    <string name="for_comments">For comments, questions or donations contact us at:</string>
    <string name="company_email" translatable="false">myCompanyEmail@gmail.com</string>
</resources>
